--- a/portfolio/public/profile/projects.json
+++ b/portfolio/public/profile/projects.json
@@ -3,7 +3,7 @@
         {
             "image" : "images/projects/musictrivia2.png",
             "title": "Music Trivia 2",
-            "bodyText": "With the new and improved Music Trivia 2.0, the user can now create an account.The registered owner can login and logout.Once logged in, the registered owner can now look at past highscores of trivias that were taken.The registered owner can lastly search for music videos that are related to the questions that were answered.The registered owner will also hear the Jeopardy Theme Song whilst playing the game.Newer website layout and added company logo",
+            "bodyText": "Web application that lets registers users play a musical quiz,enjoying a soothing music in the background.",
             "links": [
                 {
                     "text": "GitHub",
